fix: handle text wrapping properly

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -13,7 +13,6 @@
 }
 
 .navbar button {
-  /*The Team and Our Projects buttons*/
   margin-right: 15px;
   background-color: #feb211;
   color: #39455d;
@@ -27,7 +26,6 @@
 }
 
 .page-container {
-  /* width: 100%; */
   background-color: #bbebea;
 }
 
@@ -70,6 +68,7 @@
   font-weight: bold;
   color: #323b60;
   text-align: center;
+  margin: 10px;
 }
 
 .year-buttons-container {
@@ -110,10 +109,12 @@
   display: flex; /* horizontally */
   flex-direction: row;
   align-items: center; /* vertically */
-  padding: 1rem;
+  padding: 0.5rem;
   background-color: rgba(255, 255, 255, 0.25); /* transparent */
   border-radius: 0.5rem;
   text-align: left;
+  overflow: hidden; /* Ensure that content doesn't overflow */
+  max-width: 100%; /* Prevent breaking out of containers */
 }
 
 .volunteers-list {
@@ -121,6 +122,7 @@
   grid-template-columns: 1fr; /* Single column by default */
   gap: 20px;
   margin: 2% 5% 2% 5%;
+  overflow: hidden; /* Prevent overflow */
 }
 
 /* Two columns on medium and large screens */
@@ -133,10 +135,7 @@
 /* For larger screens */
 @media (min-width: 1024px) {
   .volunteers-list {
-    grid-template-columns: repeat(
-      2,
-      1fr
-    ); /* 2 columns for large screens as well */
+    grid-template-columns: repeat(2, 1fr); /* 2 columns for large screens */
   }
 }
 
@@ -151,6 +150,8 @@
   display: flex;
   flex-direction: column;
   color: #323b60;
+  flex-grow: 1;
+  max-width: calc(100% - 8.5rem);
 }
 
 .name {
@@ -158,19 +159,18 @@
   font-weight: 500;
   display: flex;
   align-items: center;
-  margin: 2% 5% 2% 0%;
-  /* justify-content:first baseline; */
   justify-content: flex-start; /* Correct alignment for icons */
-  white-space: nowrap; /* Prevents line breaks */
+  white-space: normal;
 }
 
 .job-title-skills {
+  flex-grow: 1; /* Allow it to grow and take up available space */
   font-size: 14px;
-  margin: 2% 5% 2% 0%;
+  margin: 2% 0% 2% 0%;
+  white-space: normal; /* Allow job title and skills to wrap */
 }
 
 .react-icons {
-  /* display: flex;  horizontally */
   margin-left: 10px;
   color: #323b60;
 }
@@ -187,13 +187,11 @@
   font-weight: bold;
   color: #323b60;
   text-align: center;
-  /* background-color: #e5edef; */
   background-color: #abb2e7;
   border-color: transparent;
 }
 .footer-container {
   display: flex;
-  /* flex-direction: column; */
   justify-content: space-between;
   background-color: #50cfcd;
   width: 100%;
@@ -217,45 +215,3 @@
   color: #323b60;
   background-color: #50cfcd;
 }
-
-/* ----------------NOT IN USE?------------------- */
-/* TODO - cleanup */
-
-.photo {
-  /* column-gap: 1rem; */
-  flex-direction: column;
-  cursor: pointer;
-  border-color: transparent;
-  font-size: 14px;
-  text-align: center;
-  position: relative;
-  /* border: 2px solid rgb(214, 18, 224); */
-}
-
-/* .photo a {
-  text-decoration: none;
-  color: #323b60;
-  margin-bottom: 10px;
-} */
-
-/* .photo-size {
-  height: 160px;
-} */
-/* .text-container {
-  display: flexbox;
-  flex-direction: column;
-  background-color: #BBEBEA;
-} */
-
-/* .all-photos-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  color: #323b60;
-  font-weight: bold;
-  gap: 1rem;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  text-decoration: none;
-  margin: 2rem 5% 2% 5%;
-  background-color: #FEB211;
-} */
